<resources>
    <string name="close">Tutup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_username">Username salah</string>
    <string name="invalid_password">Password salah</string>
    <string name="empty_username">Username kosong</string>
    <string name="empty_password">Password kosong</string>
    <string name="empty_phone">Nomor Telepon kosong</string>
    <string name="invalid_phone">Nomor Telepon tidak valid</string>
    <string name="empty_email">Email kosong</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="password_confirm">Ulangi Password</string>
    <string name="not_equal_password">Password tidak sama</string>
    <string name="register">Register</string>
    <string name="register_successful">Register berhasil</string>
    <string name="register_failed">Register gagal</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_vehicle">Kendaraanku</string>
    <string name="car">Mobil</string>
    <string name="motorcycle">Motor</string>

    <string name="try_again">Coba lagi</string>
    <string name="error">Error</string>

    <string name="internet_connection_error">Masalah koneksi internet</string>
    <string name="server_error">Gangguan server</string>
    <string name="unknown_error">Terjadi kesalahan</string>
    <string name="detail">Detail</string>
    <string name="add_vehicle">Tambah Kendaraan</string>
    <string name="add">Tambah</string>
    <string name="add_vehicle_successful">Tambah Kendaraan berhasil</string>
</resources>