<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vehicle.add.AddVehicleActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnPrimary"
            app:title="@string/add_vehicle"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardButton"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardCarIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="16dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/selector_car"
                app:strokeWidth="1dp">

                <ImageView
                    android:id="@+id/imgCarIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/car"
                    app:tint="@color/selector_car"
                    android:src="@drawable/ic_steering_wheel_svgrepo_com" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/labelCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/car"
                app:layout_constraintEnd_toEndOf="@+id/cardCarIcon"
                app:layout_constraintStart_toStartOf="@+id/cardCarIcon"
                app:layout_constraintTop_toBottomOf="@+id/cardCarIcon" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardMotorcycleIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="16dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/selector_motorcycle"
                app:strokeWidth="1dp">

                <ImageView
                    android:id="@+id/imgMotorcycleIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/car"
                    app:tint="@color/selector_motorcycle"
                    android:src="@drawable/ic_baseline_sports_motorsports_24" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/labelMotorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/motorcycle"
                app:layout_constraintEnd_toEndOf="@+id/cardMotorcycleIcon"
                app:layout_constraintStart_toStartOf="@+id/cardMotorcycleIcon"
                app:layout_constraintTop_toBottomOf="@+id/cardMotorcycleIcon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/labelCar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pgbAddVehicle"
        style="@style/Momobill.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:contentPaddingBottom="8dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingRight="16dp"
        app:contentPaddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/Momobill.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>